First pass at homepage

--- a/theme.toml
+++ b/theme.toml
@@ -4,7 +4,7 @@ licenselink = "https://github.com/zerostaticthemes/hugo-hero-theme/blob/master/L
 description = "Hero is a multipurpose theme with fullscreen hero images and fullwidth sections. It contains content types for a business or portfolio site."
 homepage = "https://github.com/zerostaticthemes/hugo-hero-theme"
 tags = ["responsive","minimal","clean","company","portfolio","bootstrap","zerostatic"]
-features = ["services","work","fullwidth","hero images"]
+features = ["charters","work","fullwidth","hero images"]
 min_version = "0.74.3"
 
 [author]
